adding readme documentation to feature-with-large image and form, updating form submit button

--- a/src/components/form/form.twig
+++ b/src/components/form/form.twig
@@ -67,7 +67,7 @@
   </div>
 
   <div class="form-item">
-    <input type="submit" value="Submit">
+    <button type="submit">Submit<span class="arrow"></span></button>
   </div>
 
 </form>
