--- a/src/components/form/_form.scss
+++ b/src/components/form/_form.scss
@@ -117,7 +117,7 @@ form {
       color: $grey;
     }
   }
-  input[type="submit"] {
+  button[type="submit"] {
     @extend %iastate22-button;
   }
 }
