--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -15,6 +15,7 @@
 @import "~bootstrap/scss/transitions";
 @import "~bootstrap/scss/grid";
 @import "~bootstrap/scss/accordion";
+@import "~bootstrap/scss/forms";
 
 // Core
 @import "_core/functions";
