adding image examples to the columns

--- a/src/components/pages/kitchen-sink.twig
+++ b/src/components/pages/kitchen-sink.twig
@@ -52,6 +52,9 @@
   <div class="paragraph-widget paragraph-widget--multicolumn-text">
     {% include "@multi-column-text" with two_column_text %}
   </div>
+  <div class="paragraph-widget paragraph-widget--multicolumn-text">
+    {% include "@multi-column-text" with image_columns %}
+  </div>
   <div class="paragraph-widget paragraph-widget--text-html">
     <div class="text-content">
       <h2>Heading 2 - How Images Can Be Used</h2>
