--- a/src/components/pages/kitchen-sink.twig
+++ b/src/components/pages/kitchen-sink.twig
@@ -46,14 +46,14 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut</p>
     </div>
   </div>
-  <div class="paragraph-widget paragraph-widget--multicolumn-text">
-    {% include "@multi-column-text" with three_column_text %}
+  <div class="paragraph-widget paragraph-widget--multicolumn-content">
+    {% include "@multi-column-content" with three_column_text %}
   </div>
-  <div class="paragraph-widget paragraph-widget--multicolumn-text">
-    {% include "@multi-column-text" with two_column_text %}
+  <div class="paragraph-widget paragraph-widget--multicolumn-content">
+    {% include "@multi-column-content" with two_column_text %}
   </div>
-  <div class="paragraph-widget paragraph-widget--multicolumn-text">
-    {% include "@multi-column-text" with image_columns %}
+  <div class="paragraph-widget paragraph-widget--multicolumn-content">
+    {% include "@multi-column-content" with image_columns %}
   </div>
   <div class="paragraph-widget paragraph-widget--text-html">
     <div class="text-content">
