https://bugify.idfive.com/issues/27443

--- a/src/components/call-to-action/_call-to-action.scss
+++ b/src/components/call-to-action/_call-to-action.scss
@@ -121,6 +121,7 @@
       font-family: $nimbus-sans-bold;
       font-size: rem(16);
       line-height: (29 / 16);
+      font-weight: 700;
     }
   }
   .iastate22-button-set {
