--- a/src/components/callout-inset/_callout-inset.scss
+++ b/src/components/callout-inset/_callout-inset.scss
@@ -33,6 +33,7 @@
     .feature-with-large-image__text {
       p {
         font-family: $nimbus-sans-bold;
+        font-weight: 700;
       }
     }
   }
