--- a/src/components/link-set/_link-set.scss
+++ b/src/components/link-set/_link-set.scss
@@ -7,7 +7,7 @@
     padding: 0;
     li {
       padding-left: 0;
-      margin: 0 0 rem(5) 0;
+      margin: 0 0 rem(12) 0;
       text-indent: 0;
       &:before {
         display: none;
@@ -40,5 +40,9 @@
     &:hover {
       text-decoration: underline;
     }
+  }
+  &.link-secondary,
+  &.link-tertiary {
+    margin: 0;
   }
 }
