--- a/src/components/card-set/_card-set.scss
+++ b/src/components/card-set/_card-set.scss
@@ -43,20 +43,46 @@
     }
   }
   ul {
+    display: flex;
+    flex-wrap: wrap;
+    @include media-breakpoint-up(md) {
+      margin-right: rem(-20);
+    }
     @include media-breakpoint-up(lg) {
-      display: flex;
-      flex-wrap: wrap;
       margin-right: rem(-40);
+    }
+    &:after {
+      display: none;
+      @include media-breakpoint-up(md) {
+        content: "";
+        flex: 0 1 auto;
+        width: 50%;
+        display: block;
+      }
+      @include media-breakpoint-up(lg) {
+        display: none;
+      }
     }
     li {
       max-width: rem(400);
       margin: 0 auto rem(30);
+      flex: 0 1 auto;
+      width: 100%;
+      @include media-breakpoint-up(md) {
+        width: 50%;
+        padding-right: rem(20);
+      }
       @include media-breakpoint-up(lg) {
         max-width: none;
-        flex: 0 1 auto;
         width: 33.3%;
         padding-right: rem(40);
       }
+      // &:last-child {
+      //   @include media-breakpoint-up(md) {
+      //     margin-right: auto;
+      //     margin-left: 0;
+      //   }
+      // }
     }
   }
 }
