updating callout with image small to be callout, adding support for no image in use

--- a/src/components/callout-set/_callout-set.scss
+++ b/src/components/callout-set/_callout-set.scss
@@ -1,10 +1,9 @@
-.paragraph-widget--callout-with-image-small-set {
+.paragraph-widget--callout-set {
   margin: rem(30) 0 rem(50) 0;
-  .callout-with-image--small {
-    .callout-with-image__media {
-      @include media-breakpoint-up(xl) {
-        margin-left: rem(-112);
-      }
+  .callout--no-image .callout__content,
+  .callout__media {
+    @include media-breakpoint-up(xl) {
+      margin-left: rem(-112);
     }
   }
 }
