--- a/src/components/callout-set/callout-set.twig
+++ b/src/components/callout-set/callout-set.twig
@@ -2,7 +2,7 @@
   <ul>
     {% for callout in callouts %}
     <li>
-        {% include "@callout-with-image--small" with callout %}
+        {% include "@callout" with callout %}
     </li>
     {% endfor %}
   </ul>
