--- a/src/components/callout/callout.twig
+++ b/src/components/callout/callout.twig
@@ -1,8 +1,10 @@
-<div class="callout-with-image callout-with-image--small">
-  <div class="callout-with-image__media">
+<div class="callout{% if image %}{% else %} callout--no-image{% endif %}">
+  {% if image %}
+  <div class="callout__media">
     <img src="{{ image|path }}" alt="" width="622" height="414" />
   </div>
-  <div class="callout-with-image__content text-content">
+  {% endif %}
+  <div class="callout__content text-content">
     <h3>{{title}}</h3>
     <p>{{body_copy}}</p>
     {% include "@link-set" with link_set %}
