--- a/src/components/callout/callout.twig
+++ b/src/components/callout/callout.twig
@@ -1,10 +1,10 @@
-<div class="callout{% if image %}{% else %} callout--no-image{% endif %}">
+<div class="iastate22-callout{% if image %}{% else %} iastate22-callout--no-image{% endif %}">
   {% if image %}
-  <div class="callout__media">
+  <div class="iastate22-callout__media">
     <img src="{{ image|path }}" alt="" width="622" height="414" />
   </div>
   {% endif %}
-  <div class="callout__content text-content">
+  <div class="iastate22-callout__content text-content">
     <h3>{{title}}</h3>
     <p>{{body_copy}}</p>
     {% include "@link-set" with link_set %}
