https://bugify.idfive.com/issues/27474

--- a/src/scss/_core/_variables.scss
+++ b/src/scss/_core/_variables.scss
@@ -10,7 +10,7 @@ $light-grey: #ebebeb;
 $iastate-dark-blue: #003d4c;
 $grey: #4a4a4a;
 $grey2: #e0e0e0;
-$light-grey: #f3f3f3;
+$off-white2: #f3f3f3;
 $grey4: #707070;
 $black: #000000;
 $iastate-red: #c8102e;
