--- a/src/components/table/_table.scss
+++ b/src/components/table/_table.scss
@@ -33,6 +33,7 @@
     padding: 0;
     margin: 0;
     color: black;
+    border: rem(2) solid $light-grey;
   }
 
   caption {
@@ -56,9 +57,10 @@
   }
 
   tbody {
+    border-top: none;
     tr {
       &:nth-child(even) {
-        background-color: $table-striped-bg;
+        background-color: rgba($black, 0.048);
       }
     }
     td {
@@ -66,6 +68,7 @@
       min-width: rem(225);
       max-width: 90vw;
       vertical-align: top;
+      border: rem(1) solid $off-white2;
       @include media-breakpoint-up(md) {
         min-width: initial;
       }
