--- a/src/components/site-header/_site-header.scss
+++ b/src/components/site-header/_site-header.scss
@@ -702,8 +702,29 @@ a.site-header__mega-menu-main-nav-dropdown-parent {
 .site-header__mega-menu-secondary {
   background-color: $iastate-red;
   padding: 0 rem(36) rem(60);
+  position: relative;
+  &:before {
+    content: "";
+    background-color: $iastate-red;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    opacity: 0;
+    pointer-events: none;
+    transition: 0.3s opacity ease-in-out, 0.3s transform ease-in-out, 0.3s visibility ease-in-out;
+    transform: translateX(100%);
+  }
   @include media-breakpoint-up(xl) {
     display: none;
+  }
+  &[aria-hidden="true"] {
+    &:before {
+      transform: none;
+      opacity: 1;
+    }
   }
 }
 
