--- a/src/components/table/_table.scss
+++ b/src/components/table/_table.scss
@@ -69,8 +69,10 @@
       max-width: 90vw;
       vertical-align: top;
       border: rem(1) solid $off-white2;
+      line-height: 1.5;
       @include media-breakpoint-up(md) {
         min-width: initial;
+        line-height: 1.75;
       }
       &:first-child {
         font-family: $nimbus-sans-bold;
