--- a/src/components/site-footer/_site-footer.scss
+++ b/src/components/site-footer/_site-footer.scss
@@ -2,6 +2,9 @@
   background-color: $iastate-red;
   padding: rem(36) rem(36) 0;
   position: relative;
+  @include media-breakpoint-up(md) {
+    padding: rem(62) rem(68) 0;
+  }
   @include media-breakpoint-up(xl) {
     padding: rem(59) rem(82) 0;
   }
@@ -40,7 +43,7 @@
   justify-content: space-between;
   margin: rem(27) 0;
   @include media-breakpoint-up(md) {
-    justify-content: center;
+    justify-content: flex-start;
   }
   @include media-breakpoint-up(xl) {
     margin: 0;
@@ -79,10 +82,12 @@
   ul {
     @include media-breakpoint-up(md) {
       display: flex;
-      justify-content: center;
+      justify-content: space-between;
+      border-bottom: rem(2) solid $iastate-gold;
     }
     @include media-breakpoint-up(xl) {
       justify-content: flex-end;
+      border-bottom: none;
     }
     li {
       border-bottom: rem(2) solid $iastate-gold;
@@ -93,6 +98,10 @@
         padding: 0 rem(30);
         margin-left: 0;
         margin-right: 0;
+        border-bottom: 0;
+      }
+      @include media-breakpoint-up(xl) {
+        border-bottom: rem(2) solid $iastate-gold;
       }
       &:first-child {
         border-top: rem(2) solid $iastate-gold;
@@ -117,6 +126,10 @@
           text-align: center;
           display: inline-block;
           max-width: none;
+          margin-bottom: rem(5);
+        }
+        @include media-breakpoint-up(xl) {
+          margin: rem(17) auto;
         }
         &:hover {
           color: $iastate-gold;
@@ -167,9 +180,11 @@
       margin-bottom: rem(27);
       font-size: rem(18);
       line-height: (26 / 18);
+      @include media-breakpoint-up(md) {
+        text-align: left;
+      }
       @include media-breakpoint-up(xl) {
         margin-bottom: rem(10);
-        text-align: left;
         font-size: rem(16);
         line-height: (20 / 16);
       }
@@ -198,10 +213,14 @@
   line-height: (26 / 18);
   font-family: $merriweather;
   font-weight: 700;
+  @include media-breakpoint-up(md) {
+    text-align: left;
+    margin-bottom: rem(20);
+    padding-bottom: 0;
+  }
   @include media-breakpoint-up(xl) {
     font-size: rem(16);
     line-height: (20 / 16);
-    text-align: left;
     margin: 0 0 rem(15);
     padding: 0;
   }
@@ -220,7 +239,7 @@
   ul {
     @include media-breakpoint-up(md) {
       display: flex;
-      justify-content: space-around;
+      justify-content: flex-start;
     }
     @include media-breakpoint-up(xl) {
       justify-content: flex-end;
@@ -234,6 +253,10 @@
       margin-bottom: rem(35);
       font-size: rem(18);
       line-height: (26 / 18);
+      @include media-breakpoint-up(md) {
+        flex: 1 1 0;
+        text-align: left;
+      }
       @include media-breakpoint-up(xl) {
         font-size: rem(16);
         line-height: (26 / 16);
@@ -242,6 +265,11 @@
       }
       &:last-child {
         padding-right: 0;
+      }
+      .site-footer__section-label {
+        @include media-breakpoint-up(md) {
+          margin-bottom: rem(10);
+        }
       }
       a {
         display: block;
@@ -277,6 +305,12 @@
   margin-left: rem(-36);
   margin-right: rem(-36);
   padding-bottom: rem(20);
+  @include media-breakpoint-up(md) {
+    margin-left: rem(-68);
+    margin-right: rem(-68);
+    padding-left: rem(68);
+    padding-right: rem(68);
+  }
   @include media-breakpoint-up(xl) {
     margin-left: rem(-82);
     margin-right: rem(-82);
@@ -292,6 +326,12 @@
 
 .site-footer__utility-nav {
   padding: rem(20);
+  @include media-breakpoint-up(md) {
+    padding: rem(20) 0;
+  }
+  @include media-breakpoint-up(xl) {
+    padding: rem(20);
+  }
   ul {
     @include media-breakpoint-up(md) {
       column-count: 2;
@@ -302,8 +342,12 @@
     }
     li {
       text-align: center;
+      @include media-breakpoint-up(md) {
+        text-align: left;
+      }
       @include media-breakpoint-up(xl) {
         margin-right: rem(15);
+        text-align: center;
       }
       a {
         color: $white;
@@ -325,8 +369,12 @@
   font-family: $nimbus-sans-regular;
   font-size: rem(15);
   line-height: (28 / 15);
+  @include media-breakpoint-up(md) {
+    text-align: left;
+  }
   @include media-breakpoint-up(xl) {
     font-size: rem(18);
     line-height: (28 / 18);
+    text-align: center;
   }
 }
