--- a/src/components/card-set/_card-set.scss
+++ b/src/components/card-set/_card-set.scss
@@ -41,6 +41,13 @@
       right: rem(-170);
       max-height: rem(340);
     }
+    @include media-breakpoint-up(xxl) {
+      left: -50vw;
+      width: 150vw;
+      left: 50%;
+      transform: translateX(-50%);
+      pointer-events: none;
+    }
   }
   ul {
     display: flex;
