--- a/src/components/_page-preview.twig
+++ b/src/components/_page-preview.twig
@@ -21,12 +21,14 @@
     </head>
     <body>
         <a class="skip-link" href="#main-content">Skip To Main Content</a>
-        <div class="max-bound">
-          {% include "@site-header" with header %}
-          <main id="main-content">
-            {{ yield }}
-          </main>
-          {% include "@site-footer" with footer %}
+        <div class="off-canvas">
+          <div class="max-bound">
+            {% include "@site-header" with header %}
+            <main id="main-content">
+              {{ yield }}
+            </main>
+            {% include "@site-footer" with footer %}
+          </div>
         </div>
         {% render "@privacy-consent" %}
         <script src="{{ '/js/index.js'|path }}"></script>
