--- a/src/components/blockquote/_blockquote.scss
+++ b/src/components/blockquote/_blockquote.scss
@@ -3,6 +3,20 @@
   @include media-breakpoint-up(xl) {
     margin-top: rem(60);
     margin-bottom: rem(60);
+    position: relative;
+  }
+  &:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: -50vw;
+    width: 150vw;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: -1;
+    background-color: $iastate-red;
+    pointer-events: none;
   }
 }
 
