--- a/src/components/site-footer/_site-footer.scss
+++ b/src/components/site-footer/_site-footer.scss
@@ -8,6 +8,21 @@
   @include media-breakpoint-up(xl) {
     padding: rem(59) rem(82) 0;
   }
+  &:before {
+    @include media-breakpoint-up(xxl) {
+      content: "";
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: -50vw;
+      width: 150vw;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: -1;
+      background-color: $iastate-red;
+      pointer-events: none;
+    }
+  }
 }
 
 .site-footer__flex-wrap {
@@ -321,6 +336,24 @@
     padding-left: rem(82);
     padding-right: rem(82);
     padding-bottom: 0;
+  }
+  @include media-breakpoint-up(xxl) {
+    position: relative;
+  }
+  &:before {
+    @include media-breakpoint-up(xxl) {
+      content: "";
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: -50vw;
+      width: 150vw;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: -1;
+      background-color: $iastate-maroon;
+      pointer-events: none;
+    }
   }
 }
 
