--- a/src/scss/_core/_layout.scss
+++ b/src/scss/_core/_layout.scss
@@ -1,9 +1,11 @@
+.off-canvas {
+  overflow-x: hidden;
+}
 .max-bound {
   width: 100%;
   max-width: rem(1600);
   margin: 0 auto;
   background-color: #fff;
-  overflow-x: hidden;
 }
 
 .outer-pad {
