https://bugify.idfive.com/issues/27488

--- a/src/scss/_core/_typography.scss
+++ b/src/scss/_core/_typography.scss
@@ -151,6 +151,8 @@ ol {
     list-style-type: none;
     counter-reset: item;
     li {
+      padding-left: rem(20);
+      text-indent: rem(-20);
       &:before {
         content: counter(item) ". ";
         counter-increment: item;
