--- a/src/components/blockquote/_blockquote.scss
+++ b/src/components/blockquote/_blockquote.scss
@@ -25,6 +25,10 @@
   @extend %outer-pad-x;
   padding: rem(140) rem(36) rem(100);
   position: relative;
+  @include media-breakpoint-up(md) {
+    padding-left: rem(70);
+    padding-right: rem(70);
+  }
   @include media-breakpoint-up(xl) {
     padding: rem(60) rem(36) rem(90);
   }
