--- a/src/components/blockquote/_blockquote.scss
+++ b/src/components/blockquote/_blockquote.scss
@@ -6,17 +6,19 @@
     position: relative;
   }
   &:before {
-    content: "";
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: -50vw;
-    width: 150vw;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: -1;
-    background-color: $iastate-red;
-    pointer-events: none;
+    @include media-breakpoint-up(xxl) {
+      content: "";
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: -50vw;
+      width: 150vw;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: -1;
+      background-color: $iastate-red;
+      pointer-events: none;
+    }
   }
 }
 
