--- a/src/components/feature-with-large-image/_feature-with-large-image.scss
+++ b/src/components/feature-with-large-image/_feature-with-large-image.scss
@@ -12,11 +12,17 @@
   background-color: $off-white;
   border-top: rem(30) solid $iastate-red;
   box-shadow: rem(9) rem(9) rem(20) rgba($black, 0.2);
+  @include media-breakpoint-up(sm) {
+    position: relative;
+    margin-left: rem(70);
+    margin-right: rem(70);
+  }
   @include media-breakpoint-up(lg) {
     background-color: $white;
     padding: 0;
+    margin-left: auto;
+    margin-right: auto;
     border-top: none;
-    position: relative;
     box-shadow: none;
   }
   h2 {
@@ -27,22 +33,30 @@
     margin-top: rem(25);
   }
   &:before {
-    @include media-breakpoint-up(lg) {
+    @include media-breakpoint-up(sm) {
       content: "";
+      pointer-events: none;
       background-color: $iastate-red;
       position: absolute;
-      top: rem(-60);
-      left: 0;
-      right: 0;
-      height: 50%;
-      max-height: rem(380);
-    }
-    @include media-breakpoint-up(xxl) {
-      left: -50vw;
       width: 150vw;
       left: 50%;
       transform: translateX(-50%);
-      pointer-events: none;
+      height: 50%;
+      top: rem(-30);
+      max-height: rem(203);
+    }
+    @include media-breakpoint-up(lg) {
+      top: rem(-60);
+      max-height: rem(380);
+      //   left: 0;
+      //   right: 0;
+      //   width: 100%;
+      //   transform: none;
+      // }
+      // @include media-breakpoint-up(xxl) {
+      //   width: 150vw;
+      //   left: 50%;
+      //   transform: translateX(-50%);
     }
   }
 }
