https://bugify.idfive.com/issues/27445

--- a/src/components/callout-set/_callout-set.scss
+++ b/src/components/callout-set/_callout-set.scss
@@ -26,7 +26,7 @@
     }
   }
   ul {
-    @include media-breakpoint-up(md) {
+    @include media-breakpoint-up(lg) {
       padding-top: rem(60);
       padding-bottom: rem(10);
     }
