--- a/src/components/site-header/_site-header.scss
+++ b/src/components/site-header/_site-header.scss
@@ -162,7 +162,7 @@
     }
   }
   a {
-    @include media-breakpoint-up(lg) {
+    @include media-breakpoint-up(xl) {
       text-transform: none;
       color: $iastate-maroon;
       font-family: $nimbus-sans-regular;
@@ -170,10 +170,16 @@
       font-size: rem(14);
       line-height: (24 / 14);
       text-decoration: none;
+      transition: 0.2s color ease-in-out;
     }
     @include media-breakpoint-up(xxl) {
       font-size: rem(16);
       line-height: (26 / 16);
+    }
+    &:hover {
+      @include media-breakpoint-up(xl) {
+        color: $iastate-red;
+      }
     }
   }
 }
@@ -216,8 +222,13 @@
     display: block;
     font-size: rem(20);
     text-decoration: none;
-    transition: 0.3s color ease-in-out;
+    transition: 0.2s color ease-in-out;
     cursor: pointer;
+  }
+  &:hover {
+    @include media-breakpoint-up(xl) {
+      color: $iastate-red;
+    }
   }
 }
 
