update to https://bugify.idfive.com/issues/27481

--- a/src/components/callout-set/_callout-set.scss
+++ b/src/components/callout-set/_callout-set.scss
@@ -32,6 +32,9 @@
     }
     li {
       margin-bottom: rem(51);
+      @include media-breakpoint-up(xl) {
+        margin-bottom: rem(35);
+      }
     }
   }
   .link-set {
