--- a/src/components/multi-column-content/_multi-column-content.scss
+++ b/src/components/multi-column-content/_multi-column-content.scss
@@ -10,7 +10,7 @@
   }
 }
 .multi-column-content__column {
-  margin: rem(40) 0;
+  margin: 0 0 rem(40) 0;
   @include media-breakpoint-up(md) {
     flex: 1 1 0px;
     padding-right: rem(40);
