homepage hero section mobile styles, incorporating animated SVG

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -60,3 +60,6 @@
 @import "../components/callout-set/callout-set";
 @import "../components/privacy-consent/privacy-consent";
 @import "../components/privacy-toggle/privacy-toggle";
+
+// Pages
+@import "../components/pages/home";
